--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 language: python
+
+services:
+  - docker
+
 python:
   - "3.4"
   - "3.5"
   - "3.6"      # current default Python on Travis CI
   - "3.7"
-  - "3.7-dev"  # 3.7 development branch
-  - "3.8-dev"  # 3.8 development branch
-  - "nightly"  # nightly build
+
+# before_install:
+#   - docker pull python:latest
+#   - docker pull alpine
+#   - docker run alpine
+
 # command to install dependencies
-# install:
-#   - pip install -r requirements.txt
+
+# deploy:
+#   provider: pages
+#   skip_cleanup: true # Set in the settings page of your repository, as a secure variable
+#   keep_history: true
+#   on:
+#     branch: master
+
 # command to run tests
 script:
   - pytest
+
